# agentcore-cli

./: AGENTS.md  CHANGELOG.md  package-lock.json  package.json
.github/workflows/: build-and-test.yml  e2e-tests-full.yml  lint.yml  pr-ai-review.yml  pr-tarball.yml  release.yml
docs/: PERMISSIONS.md  commands.md  configuration.md  frameworks.md  gateway.md  memory.md
docs/policies/: iam-policy-user.json
e2e-tests/: byo-custom-jwt.test.ts  e2e-helper.ts  import-resources.test.ts  strands-bedrock-memory.test.ts
e2e-tests/fixtures/import/: cleanup_resources.py  common.py  setup_evaluator.py  setup_memory_full.py  setup_runtime_basic.py
e2e-tests/fixtures/import/app/: main.py  pyproject.toml
e2e-tests/fixtures/import/app/model/: load.py
integ-tests/: add-remove-gateway.test.ts  add-remove-resources.test.ts  create-frameworks.test.ts  create-memory.test.ts  create-protocols.test.ts  tag.test.ts  telemetry.test.ts
integ-tests/tui/: add-memory-episodic.test.ts
schemas/: agentcore.schema.v1.json
scripts/: bump-version.ts  check-old-cli.lib.mjs
src/assets/: AGENTS.md
src/assets/__tests__/: dockerfile-render.test.ts
src/assets/__tests__/__snapshots__/: assets.snapshot.test.ts.snap  dockerfile-render.test.ts.snap
src/assets/agents/: AGENTS.md
src/assets/cdk/: package.json
src/assets/cdk/test/: cdk.test.ts
src/assets/container/python/: Dockerfile
src/assets/python/a2a/langchain_langgraph/base/: main.py  pyproject.toml
src/assets/python/agui/googleadk/base/: README.md  main.py  pyproject.toml
src/assets/python/agui/googleadk/base/model/: load.py
src/assets/python/agui/langchain_langgraph/base/: README.md  gitignore.template  main.py  pyproject.toml
src/assets/python/agui/langchain_langgraph/base/model/: load.py
src/assets/python/agui/strands/base/: README.md  main.py  pyproject.toml
src/assets/python/agui/strands/base/model/: load.py
src/assets/python/http/langchain_langgraph/base/: main.py  pyproject.toml
src/cli/: cli.ts  global-config.ts
src/cli/__tests__/: global-config.test.ts
src/cli/__tests__/helpers/: temp-config.ts
src/cli/aws/: agentcore.ts  agui-parser.ts  agui-types.ts  bedrock-import-types.ts  bedrock-import.ts  index.ts
src/cli/aws/__tests__/: agentcore-mcp-bearer.test.ts  agui-types.test.ts  bedrock-import.test.ts
src/cli/cloudformation/: outputs.ts
src/cli/commands/add/: actions.ts  command.tsx  types.ts  validate.ts
src/cli/commands/create/: action.ts  command.tsx  types.ts  validate.ts
src/cli/commands/deploy/: actions.ts  command.tsx
src/cli/commands/dev/: command.tsx
src/cli/commands/fetch/: action.ts  command.tsx  types.ts
src/cli/commands/import/: actions.ts  import-memory.ts  types.ts  yaml-parser.ts
src/cli/commands/invoke/: action.ts  command.tsx  types.ts  validate.ts
src/cli/commands/logs/: action.ts  command.tsx  types.ts
src/cli/commands/remove/: command.tsx  types.ts
src/cli/commands/run/: command.tsx
src/cli/commands/shared/: vpc-utils.ts
src/cli/commands/status/: action.ts  command.tsx
src/cli/commands/tag/: action.ts  command.tsx  index.ts  types.ts
src/cli/commands/telemetry/: actions.ts  command.ts  index.ts
src/cli/external-requirements/: detect.ts  index.ts
src/cli/external-requirements/__tests__/: check-old-cli.test.ts  checks-extended.test.ts  detect.test.ts
src/cli/logging/: remove-logger.ts
src/cli/logging/__tests__/: invoke-logger-session-id.test.ts
src/cli/operations/: attach.ts
src/cli/operations/deploy/: preflight.ts
src/cli/operations/dev/: codezip-dev-server.ts  container-dev-server.ts  gateway-env.ts  index.ts  invoke-agui.ts  invoke-types.ts  invoke.ts  utils.ts
src/cli/operations/eval/: logs-eval.ts  run-eval.ts  types.ts
src/cli/operations/fetch-access/: fetch-gateway-token.ts  fetch-runtime-token.ts  oauth-token.ts
src/cli/operations/remove/: remove-gateway-target.ts
src/cli/primitives/: AgentPrimitive.tsx  BasePrimitive.ts  CredentialPrimitive.tsx  EvaluatorPrimitive.ts  GatewayPrimitive.ts  GatewayTargetPrimitive.ts  MemoryPrimitive.tsx  PolicyEnginePrimitive.ts
src/cli/primitives/__tests__/: GatewayPrimitive.test.ts
src/cli/telemetry/: client.ts  config.ts  error-classification.ts  index.ts  resolve.ts
src/cli/telemetry/__tests__/: client.test.ts  composite-sink.test.ts  error-classification.test.ts  resolve.test.ts  resource-resolver.test.ts
src/cli/telemetry/schemas/: command-run.ts  common-attributes.ts  common-shapes.ts  index.ts
src/cli/telemetry/sinks/: in-memory-sink.ts  metric-sink.ts  otel-metric-sink.ts
src/cli/templates/: BaseRenderer.ts  index.ts  types.ts
src/cli/tui/: App.tsx  copy.ts
src/lib/: constants.ts  index.ts
src/lib/errors/: config.ts
src/lib/packaging/: helpers.ts
src/schema/: constants.ts
src/schema/__tests__/: constants.test.ts
src/schema/llm-compacted/: agentcore.ts  mcp.ts
src/schema/schemas/: agent-env.ts  agentcore-project.ts  mcp.ts
src/test-utils/: index.ts
(+103 files in other folders)
