[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore AG-UI Agent using Strands SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    {{#if (eq modelProvider "Anthropic")}}"anthropic >= 0.30.0",
    {{/if}}"ag-ui-strands >= 0.1.7",
    "ag-ui-protocol >= 0.1.10",
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
    "fastapi >= 0.115.12",
    {{#if (eq modelProvider "Gemini")}}"google-genai >= 1.0.0",
    {{/if}}{{#if (eq modelProvider "OpenAI")}}"openai >= 1.0.0",
    {{/if}}"strands-agents >= 1.15.0",
    "strands-agents-tools >= 0.2.14",
    "uvicorn >= 0.34.3",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
