[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ name }}"
version = "0.1.0"
description = "AgentCore Runtime Application using LangChain/LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aws-opentelemetry-distro",
    "opentelemetry-instrumentation-langchain >= 0.59.0",
    "langgraph >= 1.0.2",
    "mcp >= 1.19.0",
    "langchain-mcp-adapters >= 0.1.11",
    "langchain >= 1.0.3",
    "bedrock-agentcore >= 1.0.3",
    "botocore[crt] >= 1.35.0",
{{#if (eq modelProvider "Bedrock")}}
    "langchain-aws >= 1.0.0",
{{/if}}
{{#if (eq modelProvider "Anthropic")}}
    "langchain-anthropic >= 1.1.0",
{{/if}}
{{#if (eq modelProvider "OpenAI")}}
    "langchain-openai >= 1.0.3",
{{/if}}
{{#if (eq modelProvider "Gemini")}}
    "langchain-google-genai >= 3.0.3",
{{/if}}
    {{#if hasGateway}}{{#if (includes gatewayAuthTypes "AWS_IAM")}}"mcp-proxy-for-aws >= 1.1.0",
    {{/if}}{{/if}}
]

[tool.hatch.build.targets.wheel]
packages = ["."]
